--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,9 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
-jspm_packages/
+/node_modules
+/jspm_packages
+/lib
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
