--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Exemplo de API em node",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc-watch --onSuccess \"node ./lib/index.js\"",
+    "start": "npx tsc-watch --onSuccess \"node --env-file=.env ./lib/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "firebase-admin": "^12.7.0"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.8",
