--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "celebrate": "^15.0.3",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
     "firebase-admin": "^12.7.0"
