--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "ecommerce-api",
   "version": "1.0.0",
   "description": "Exemplo de API em node",
-  "main": "index.js",
+  "exports": "./lib/index.js",
+  "type": "module",
+  "engines": {
+    "node": "22"
+  },
   "scripts": {
     "start": "npx tsc-watch --onSuccess \"node --env-file=.env ./lib/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,11 +18,12 @@
     "celebrate": "^15.0.3",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
+    "file-type": "^19.6.0",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.7.0"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.8",
+    "@tsconfig/node22": "^22.0.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "tsc-watch": "^6.2.0",
